# python-project-template

./: .coveragerc  .dockerignore  .flake8  .gitignore  .prospector.yaml  .pylintrc  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  index.html  main.py  mkdocs.yml  pyproject.toml  pyproject.toml.sample  pyside_path.sh  requirements_dev.txt  ruff.toml
.github/workflows/: build_and_publish.yml  deploy_dev.yml  deploy_prod.yml  deploy_stage.yml  test_and_lint.yml
docs/: cool_feature.md  features.md  index.md
python_gui_project_template/: __init__.py  __main__.py  controller.py  model.py  presenter.py  view.py
python_gui_project_template/ui/: __init__.py  main_window.py  main_window.ui  main_window_ui.py
python_project_template/: __main__.py  main.py
python_project_template/tests/test_main/: test_main.py
src/python_project_template/: __init__.py
src/tests/: test_hello.py
test/: test_main.py
