[tool.black]
line-length = 120
exclude = '''
/(
  | migrations
  | venv
)/
'''

[tool.isort]
profile = "black"
lines_after_imports = 2
skip = [".gitignore", ".dockerignore", "migrations", "venv"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "project description"
authors = ["Andrei Okulov <andrei.okulov@toolsense.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0rc2"
result = "^0.8.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
