[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "project description"
authors = [
    "Andrei Okulov <andrei.okulov@toolsense.io>",
    "Robert Nyström <robert.nystrom@toolsense.io>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
result = "^0.8.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
coverage = "^6.5.0"
mypy = "^1.7.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
