[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "project description"
authors = [
    "Andrei Okulov <andrei.okulov@toolsense.io>",
    "Robert Nyström <robert.nystrom@toolsense.io>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
result = "^0.14.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
coverage = "^7.3.2"
mypy = "^1.7.0"
ruff = "^0.1.6"
pytest = "^7.4.3"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
